# advent_of_code2023

./: .gitignore  LICENSE
day1/: CMakeLists.txt  day1  day1_pt2  example.txt  main.cpp  main2.cpp
day2/: CMakeLists.txt  main.cpp  main2.cpp
day3/: CMakeLists.txt  main.cpp  main2.cpp
day4/: CMakeLists.txt  main.cpp  main2.cpp
day6/: CMakeLists.txt  main.cpp  main2.cpp
day7/: CMakeLists.txt  main.cpp  main2.cpp
day8/: CMakeLists.txt  main.cpp  main2.cpp  main2b.cpp
day9/: CMakeLists.txt  main.cpp  main2.cpp
